my int tests work

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/21 15:35:55 by bvercaem          #+#    #+#              #
-#    Updated: 2023/05/08 17:14:17 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/05/09 13:03:53 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,6 +19,7 @@ SRCS = ft_printf.c \
 	   ft_conv_char.c \
 	   ft_conv_str.c \
 	   ft_conv_nb.c \
+	   ft_fill_nb.c \
 	   ft_check_flags.c \
 	   ft_flags.c \
 	   ft_flags_2.c \
