--- a/get_next_line/.vscode/settings.json
+++ b/get_next_line/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"files.associations": {
 		"locale": "c",
 		"get_next_line.h": "c",
-		"unistd.h": "c"
+		"unistd.h": "c",
+		"get_next_line_bonus.h": "c"
 	}
 }
