euh, didn't do much, can't replicate the garbage value problem

--- a/libft/ft_printf/Makefile
+++ b/libft/ft_printf/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME			= ft_printf
+NAME			= ft_printf.tmp
 
 STATIC_NAME		= ../libft.a
 
