--- a/libft/legacy/Makefile
+++ b/libft/legacy/Makefile
@@ -10,7 +10,7 @@
 #                                                                              #
 # **************************************************************************** #
 
-NAME			= legacy
+NAME			= legacy.tmp
 
 STATIC_NAME		= ../libft.a
 
