added avg and closest to average compatibility, hasn't been tested yet

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/05 17:48:56 by bvercaem          #+#    #+#              #
-#    Updated: 2023/06/08 19:13:42 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/06/09 16:54:58 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -47,7 +47,8 @@ SRCS			=	$(SOURCES_WD)ps_initialise_stack.c \
 					$(SOURCES_WD)ps_double_operations.c \
 					$(SOURCES_WD)ps_list_utils.c \
 					$(SOURCES_WD)ps_small_sorts.c \
-					$(SOURCES_WD)ps_stack_manoeuvres.c
+					$(SOURCES_WD)ps_stack_manoeuvres.c \
+					$(SOURCES_WD)ps_attributes.c
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
 
