--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/05 17:48:56 by bvercaem          #+#    #+#              #
-#    Updated: 2023/06/09 16:54:58 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/06/12 15:38:40 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -46,7 +46,9 @@ SRCS			=	$(SOURCES_WD)ps_initialise_stack.c \
 					$(SOURCES_WD)ps_operations.c \
 					$(SOURCES_WD)ps_double_operations.c \
 					$(SOURCES_WD)ps_list_utils.c \
+					$(SOURCES_WD)ps_chunk_utils.c \
 					$(SOURCES_WD)ps_small_sorts.c \
+					$(SOURCES_WD)ps_big_sort.c \
 					$(SOURCES_WD)ps_stack_manoeuvres.c \
 					$(SOURCES_WD)ps_attributes.c
 
