--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/05 17:48:56 by bvercaem          #+#    #+#              #
-#    Updated: 2023/06/16 16:10:29 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/06/16 19:27:55 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -52,7 +52,8 @@ SRCS			=	$(SOURCES_WD)ps_initialise_stack.c \
 					$(SOURCES_WD)ps_stack_manoeuvres.c \
 					$(SOURCES_WD)ps_attributes.c \
 					$(SOURCES_WD)ps_sort_operations.c \
-					$(SOURCES_WD)ps_print_list.c
+					$(SOURCES_WD)ps_print_utils.c \
+					$(SOURCES_WD)ps_print_print.c
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
 
