--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/05 17:48:56 by bvercaem          #+#    #+#              #
-#    Updated: 2023/06/19 16:55:49 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/06/20 16:47:18 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -53,7 +53,7 @@ SRCS			=	$(SOURCES_WD)ps_initialise_stack.c \
 					$(SOURCES_WD)ps_attributes.c \
 					$(SOURCES_WD)ps_print_utils.c \
 					$(SOURCES_WD)ps_print_print.c \
-#					$(SOURCES_WD)ps_sort_operations.c
+					$(SOURCES_WD)ps_print_trim.c
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
 
