cleanup and added 't_chunk *get_last_chunk'

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/05 17:48:56 by bvercaem          #+#    #+#              #
-#    Updated: 2023/06/20 16:47:18 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/06/21 15:07:18 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -45,7 +45,7 @@ SRCS			=	$(SOURCES_WD)ps_initialise_stack.c \
 					$(SOURCES_WD)ps_checks.c \
 					$(SOURCES_WD)ps_operations.c \
 					$(SOURCES_WD)ps_double_operations.c \
-					$(SOURCES_WD)ps_list_utils.c \
+					$(SOURCES_WD)ps_list_new_add_del.c \
 					$(SOURCES_WD)ps_chunk_utils.c \
 					$(SOURCES_WD)ps_small_sorts.c \
 					$(SOURCES_WD)ps_big_sort.c \
@@ -53,7 +53,8 @@ SRCS			=	$(SOURCES_WD)ps_initialise_stack.c \
 					$(SOURCES_WD)ps_attributes.c \
 					$(SOURCES_WD)ps_print_utils.c \
 					$(SOURCES_WD)ps_print_print.c \
-					$(SOURCES_WD)ps_print_trim.c
+					$(SOURCES_WD)ps_print_trim.c \
+					$(SOURCES_WD)ps_big_sort_utils.c
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
 
