added two print optimisations, not quite there yet but so close

--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/06/05 17:48:56 by bvercaem          #+#    #+#              #
-#    Updated: 2023/06/21 15:07:18 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/06/22 14:31:42 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -49,12 +49,13 @@ SRCS			=	$(SOURCES_WD)ps_initialise_stack.c \
 					$(SOURCES_WD)ps_chunk_utils.c \
 					$(SOURCES_WD)ps_small_sorts.c \
 					$(SOURCES_WD)ps_big_sort.c \
+					$(SOURCES_WD)ps_big_sort_utils.c \
 					$(SOURCES_WD)ps_stack_manoeuvres.c \
 					$(SOURCES_WD)ps_attributes.c \
 					$(SOURCES_WD)ps_print_utils.c \
 					$(SOURCES_WD)ps_print_print.c \
 					$(SOURCES_WD)ps_print_trim.c \
-					$(SOURCES_WD)ps_big_sort_utils.c
+					$(SOURCES_WD)ps_print_optimisation.c
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
 
