--- a/pipex/libft/legacy/Makefile
+++ b/pipex/libft/legacy/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/04/10 14:06:55 by bvercaem          #+#    #+#              #
-#    Updated: 2023/07/18 17:16:33 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/07/18 17:42:15 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -74,7 +74,7 @@ SRCS			=	$(SOURCES)ft_isalpha.c \
 					$(SOURCES)ft_lstclear.c \
 					$(SOURCES)ft_lstiter.c \
 					$(SOURCES)ft_lstmap.c \
-					$(SOURCES)ft_strstr.c \
+					$(SOURCES)ft_strchrs.c \
 					$(SOURCES)ft_strshift.c
 
 #-------------------OBJECTS----------------------
