ok this is hell :)

--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -6,7 +6,7 @@
 #    By: bvercaem <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/07/05 15:41:13 by bvercaem          #+#    #+#              #
-#    Updated: 2023/07/13 16:47:57 by bvercaem         ###   ########.fr        #
+#    Updated: 2023/07/18 16:24:42 by bvercaem         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -44,6 +44,7 @@ BONUS_MAIN		=	$(BONUS_WD)main_bonus.c
 
 SRCS			=	$(SOURCES_WD)px_pipes.c \
 					$(SOURCES_WD)px_execution.c \
+					$(SOURCES_WD)px_execution_utils.c \
 					$(SOURCES_WD)px_end.c
 
 BONUS_SRC		=	$(BONUS_WD)___ _bonus.c
